[package]
name = "todo2"
version = "0.1.0"
edition = "2021"

[dependencies.chrono]
version = "0.4.30"
optional = true

[dependencies.time]
version = "0.3.28"
optional = true

[dependencies.quote]
version = "1.0.33"
features = ["proc-macro"]

[dependencies.proc-macro2]
version = "1.0.67"

[features]
default = ["original-compatibility", "strict-syntax", "and-time", "time-backend"]
log = []
compile-error = []
with-chrono = ["chrono", "and-time"]
with-time = ["time", "and-time"]
chrono-backend = ["chrono", "and-time"]
time-backend = ["time", "and-time"]
original-compatibility = []
strict = ["original-compatibility", "compile-error"]
strict-syntax = []
am-cool = []
# In the `by` syntax, make it able to specify a time
and-time = []

[lib]
proc-macro = true
path = "src/lib.rs"

