[package]
name = "todo2"
version = "0.1.2"
edition = "2021"
license = "MIT OR Unlicense"
authors = ["Anas Elgarhy <anas.elgarhy.dev@gmail.com>"]
description = "An enhanced todo macro inspired by todo_or_die"
repository = "https://github.com/0x61nas/todo2"
documentation = "https://docs.rs/todo2"
keywords = ["todo", "todo-or-die"]
categories = ["development-tools", "macros"]
rust-version = "1.67.1"

[dependencies.chrono]
version = "0.4.30"
optional = true

[dependencies.time]
version = "0.3.28"
optional = true

[dependencies.quote]
version = "1.0.33"
features = ["proc-macro"]

[dependencies.proc-macro2]
version = "1.0.67"

[features]
default = ["original-compatibility", "strict-syntax", "and-time", "time-backend"]
log = []
compile-error = []
with-chrono = ["chrono", "and-time"]
with-time = ["time", "and-time"]
chrono-backend = ["chrono", "and-time"]
time-backend = ["time", "and-time"]
original-compatibility = []
strict = ["original-compatibility", "compile-error"]
strict-syntax = []
am-cool = []
# In the `by` syntax, make it able to specify a time
and-time = []

[lib]
proc-macro = true
path = "src/lib.rs"
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
